--- a/10Esercitazione/css/master.css
+++ b/10Esercitazione/css/master.css
@@ -1,6 +1,7 @@
 *{
   margin:0;
   padding:0;
+  /* border: 0; */
   box-sizing: border-box;
 }
 #container {
@@ -14,7 +15,9 @@
   background-color: rgba(0, 0, 0, 0.5);
   position:absolute;
   left: 0;
-  right: 0;
+  /* right: 0; */
+  top: 0;
+  /* bottom:0; */
   width: 100%;
   height: 100vh;
 }
