--- a/maree-vue-sass/src/Partials/_variables.scss
+++ b/maree-vue-sass/src/Partials/_variables.scss
@@ -2,5 +2,5 @@ $bg-primary: blue;
 $bg-secondary: white;
 
 $color-primary: #faf7f1;
-$color-secondary: blue;
+$color-secondary: #E1C0B0;
 $color-underline: #f0cebe;
