--- a/maree-vue-sass/src/style.scss
+++ b/maree-vue-sass/src/style.scss
@@ -1,51 +1,79 @@
 @import "Partials/variables";
-*{
+
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Muli', sans-serif;
+    font-family: 'Lato', sans-serif;
 }
-.container-fluid{
+
+.text-line {
+    position: absolute;
+    bottom: 2px;
+    right: 0;
+    width: 200%;
+    height: 7px;
+    background-color: $color-underline;
+    opacity: 0.7;
+    z-index: -1;
+}
+
+.container-fluid {
     width: 100%;
 }
-nav{
-    padding-top: 40px;
+
+nav {
+    padding: 40px 5% 0;
     height: 90px;
     display: flex;
-    justify-content: space-around;
-    .navbar-brand{
+    justify-content: space-between;
+
+    .navbar-brand {
         height: 80%;
-        img{
+
+        img {
             height: 80%;
 
         }
     }
-    ul{
+
+    ul {
         width: 60%;
         display: flex;
-        justify-content:center;
+        justify-content: center;
         list-style-type: none;
-        li{
+
+        li {
+            &:first-of-type {
+                .text-line {
+                    width: 100%;
+                }
+            }
+
             width: calc(100% / 7);
             display: flex;
             align-items: center;
-            &:last-of-type{
+
+            &:last-of-type {
                 justify-content: center;
-                }
-            a{
+            }
+
+            a {
                 width: 100%;
                 font-weight: bold;
                 text-decoration: none;
                 text-align: center;
                 color: black;
             }
-            span{
-                text-align: center;
+
+            span {
                 width: 100%;
+                text-align: center;
                 font-weight: bold;
                 position: relative;
-                ul{
-                    width: 120%;
+
+                ul {
+                    width: 170%;
                     position: absolute;
                     top: 30px;
                     left: 0;
@@ -55,31 +83,191 @@ nav{
                     list-style-type: none;
                     z-index: 100;
                     animation: growDown 300ms ease-in-out forwards;
-                    transform-origin: top center;  
-                    background-color: $color-primary; 
-                }                 
-                li{
+                    transform-origin: top center;
+                    background-color: $color-primary;
+                }
+
+                li {
                     width: 100%;
                     padding: 5%;
-                        
-                        a{
-                            text-align: start;
-                            text-decoration: none;
-                            color: grey;
-                        }
+
+                    a {
+                        text-align: start;
+                        text-decoration: none;
+                        color: grey;
                     }
                 }
             }
         }
     }
+}
+
 @keyframes growDown {
     0% {
         transform: scaleY(0)
     }
+
     80% {
         transform: scaleY(0.8)
     }
+
     100% {
         transform: scaleY(1)
+    }
+}
+
+main {
+    .jumbotron {
+        padding: 0 5%;
+        margin-top: 40px;
+
+        .carousel {
+            width: 100%;
+            height: 600px;
+            position: relative;
+
+            .description {
+                position: absolute;
+                top: 7%;
+                left: 7%;
+                width: 40%;
+                height: 501px;
+                .jumboTitle{
+                    font-size: 75px;
+                    font-family: 'Lato', sans-serif;
+                    font-weight: 400;
+                    i{
+                        font-family: 'Crimson-Text', serif;
+                        font-weight: 700;
+                    }
+                }
+                .jumboPar{
+                    margin-top: 50px;
+                    font-size: 30px;
+                    position: absolute;
+                    top: 150px;
+                }
+                .jumboButton{
+                    position: absolute;
+                    top: 330px;
+                    font-size: 20px;
+                    border: 3px solid $color-secondary;
+                    padding: 5%;
+                    border-radius: 3px;
+                    a{
+                        color: black;
+                        text-decoration: none;
+                    }
+                    &:hover{
+                        background-color: $color-secondary;
+                        a{
+                            color: white;
+                        }
+                    }
+                }
+            }
+
+            .png {
+                width: 0;
+                height: 501px;
+                position: relative;
+                top: 0;
+                right: 70px;
+
+                img:nth-child(1) {
+                    position: absolute;
+                    top: 0;
+                    left: 700px;
+                }
+
+                img:nth-child(2) {
+                    position: absolute;
+                    bottom: 42px;
+                    left: 600px;
+                }
+
+                img:nth-child(3) {
+                    position: absolute;
+                    top: 180px;
+                    left: 580px;
+                }
+
+                img:nth-child(4) {
+                    position: absolute;
+                    top:59px;
+                    left: 1200px;
+                }
+
+                img:nth-child(5) {
+                    position: absolute;
+                    top: 50px;
+                    left: 1230px;
+                }
+
+                img:nth-child(6) {
+                    position: absolute;
+                    top: 150px;
+                    left: 1300px;
+                }
+                img:nth-child(7) {
+                    position: absolute;
+                    bottom: 42px;
+                    left: 700px;
+                }
+                img:nth-child(8) {
+                    position: absolute;
+                    bottom: 42px;
+                    left: 1200px;
+                }
+                img:nth-child(9) {
+                    position: absolute;
+                    bottom: 42px;
+                    left: 1300px;
+                }
+                img:nth-child(10) {
+                    position: absolute;
+                    bottom: 42px;
+                    left: 1250px;
+                }
+            }
+        }
+    }
+}
+
+footer {
+    height: 181px;
+    background-color: #C0E1CF;
+
+    .container-fluid {
+        width: 100%;
+        padding: 2% 10%;
+
+        .row {
+
+            ul {
+                height: 120px;
+                width: 100%;
+                display: flex;
+                align-items: baseline;
+                flex-wrap: wrap;
+                flex-direction: column;
+                list-style-type: none;
+
+                li {
+                    width: 20%;
+                    height: 32px;
+                    margin: 10px;
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                }
+
+                .socials {
+                    width: 25%;
+                    display: flex;
+                    justify-content: space-around;
+                }
+            }
+        }
     }
 }
